--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,12 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
   /* border: 2px solid red; */
+}
+
+.scroll-up {
+  display: none;
 }
 
 ul {
