--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,10 +61,11 @@ section {
 
 /* Navbar */
 nav {
-  position: sticky;
-  top: 0;
-  left: 0;
-  z-index: 1;
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  z-index: 1001; 
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -228,6 +229,10 @@ nav ul li {
   height: 100px;
 }
 
+.other-project-title {
+  margin-top: 1rem; 
+}
+
 /* Projects section ends */
 
 /* Contacts section */
@@ -339,6 +344,105 @@ footer {
   box-shadow: 0 3px 10px var(--primary-shadow);
   padding: 20px;
   margin: 10px;
+  max-width: 350px; 
+  height: 350px; 
+  box-sizing: border-box; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  overflow: hidden; 
+}
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  gap: 20px; 
+  justify-content: center; 
+  margin: 0 auto; 
+  max-width: 1000px; 
+}
+
+.project-slider-wrapper {
+  position: relative; 
+  overflow: hidden; 
+}
+
+.project-slider {
+  height: 200px; 
+  display: flex; 
+}
+
+.project-slider-wrapper {
+  position: relative; 
+  overflow: hidden; 
+}
+
+.project-slider .slick-dots {
+  display: none;
+}
+
+.project-slider .slick-prev,
+.project-slider .slick-next {
+  width: 30px;
+  height: 30px;
+  background-color: rgba(0, 0, 0, 0.5); 
+  border-radius: 50%; 
+  color: #fff; 
+  z-index: 1000; 
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer; 
+  transition: background-color 0.3s; 
+}
+
+.project-slider .slick-prev {
+  left: 10px; 
+}
+
+.project-slider .slick-next {
+  right: 10px; 
+}
+
+  .project-slider .slick-prev:hover,
+  .project-slider .slick-next:hover {
+    background-color: rgba(0, 0, 0, 0.7); 
+  }
+
+.project-slider .slick-prev:focus,
+.project-slider .slick-next:focus {
+  background-color: rgba(0, 0, 0, 0.5); 
+}
+
+/* Estilo de las flechas */
+.project-slider .slick-prev:before,
+.project-slider .slick-next:before {
+  font-family: 'Font Awesome 5 Free'; 
+  font-weight: 900; 
+  content: '\f053'; 
+}
+
+.project-slider .slick-next:before {
+  content: '\f054'; 
+}
+
+.project-card img,
+.project-card .project-pic {
+  width: 100%; 
+  height: 150px;
+  display: block; 
+}
+
+.first-project .project-content h3 {
+  position: relative;
+  top: -40px; 
+}
+
+.first-project .project-content p {
+  position: relative;
+  top: -25px; 
 }
 
 /* Media queries for responsiveness */
@@ -428,6 +532,45 @@ footer {
   .contact-form-container {
     max-width: 23.75rem;
   }
+
+  .projects-container {
+    display: grid; 
+    grid-template-columns: 1fr; 
+    gap: 10px; 
+    padding: 0; 
+    margin: 0 auto; 
+    max-width: 100%; 
+    justify-items: center; 
+  }
+
+  .project-card {
+    max-width: 100%; 
+    height: auto; 
+    box-sizing: border-box; 
+  }
+  
+  .project-slider {
+    height: 150px; 
+  }
+
+  .project-card img,
+  .project-card .project-pic {
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
+  }
+
+  .other-project-title {
+    margin-top: 1rem; 
+  }
+  .first-project .project-content h3 {
+    position: relative;
+    top: -1px; 
+  }
+  .first-project .project-content p {
+    position: relative;
+    top: 2px;
+  }
 }
 
 @media screen and (max-width: 420px) {
@@ -463,5 +606,40 @@ footer {
   .contact-form-container {
     max-width: 17.75rem;
   }
+
+  .projects-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    padding: 0; 
+    margin: 0 auto; 
+    max-width: 100%;
+    justify-items: center; 
+  }
+
+  .project-card {
+    max-width: 100%; 
+    height: auto; 
+    box-sizing: border-box; 
+  }
   
+  .project-slider {
+    height: 150px; 
+  }
+
+  .project-card img,
+  .project-card .project-pic {
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
+  }
+
+  .other-project-title {
+    margin-top: 1rem; 
+  }
+  .first-project .project-content h3 {
+    position: relative;
+    top: -20px;
+  }
+
 }
