--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,8 +15,15 @@
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
+
+  /* Variables para modo oscuro */
+  --bg-color-dark: #333745;
+  --text-color-dark: #EEF5DB;
+  --primary-color-dark: #6b77e5;
+  --secondary-color-dark: #ffffff;
+  --primary-shadow-dark: #4d4f69;
+  --secondary-shadow-dark: #6b4f44;
 }
-/* Variables end */
 
 html {
   scroll-behavior: smooth;
@@ -27,8 +34,6 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
-  /* border: 2px solid red; */
 }
 
 .scroll-up {
@@ -51,13 +56,6 @@ a:hover {
 body {
   font-family: var(--font-family);
 }
-
-section {
-  /* max-width: 1100px;
-  margin: auto; */
-}
-
-/* CSS Resets end */
 
 /* Navbar */
 nav {
@@ -104,7 +102,6 @@ nav ul li {
   cursor: pointer;
   display: none;
 }
-/* Navbar ends */
 
 /* Hero section */
 .hero {
@@ -124,7 +121,7 @@ nav ul li {
 }
 
 .bio {
-  margin-top: 13%;
+  margin-top: 20%;
   margin-left: 5%;
 }
 
@@ -136,7 +133,6 @@ nav ul li {
   line-height: var(--line-height);
   padding: 0.3rem 0;
 }
-/* Hero section ends */
 
 /* More about */
 .more-about {
@@ -153,7 +149,6 @@ nav ul li {
   line-height: var(--line-height);
   padding: 0.4rem;
 }
-/* More about ends */
 
 /* Skills section */
 .skills {
@@ -175,7 +170,6 @@ nav ul li {
   width: 9.875rem;
   height: 9.25rem;
 }
-/* Skills section ends */
 
 /* Projects section */
 .projects {
@@ -235,76 +229,50 @@ nav ul li {
 
 /* Projects section ends */
 
-/* Contacts section */
+/* Contact section */
 .contact {
-  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: var(--bg-color); 
+  margin-bottom: 50px;
+}
+
+.contact-container {
+  text-align: center;
 }
 
 .contact h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: var(--secondary-color) 
+}
+
+.contact-icon-container {
   text-align: center;
-  margin-bottom: var(--bottom-margin-2);
 }
 
-.contact-form-container {
-  max-width: 40.75rem;
-  margin: 0 auto;
-  padding: 0.938rem;
-  border-radius: 5px;
-  box-shadow: 0 3px 10px rgb(192, 188, 188);
+.whatsapp-link {
+  display: inline-block;
+  text-decoration: none;
 }
 
-.contact-form-container label {
-  line-height: 2.7em;
-  font-weight: var(--bold-font);
-  color: var(--primary-color);
+.whatsapp-icon {
+  width: 50px;
+  height: 50px;
+  transition: transform 0.3s ease;
 }
 
-.contact-form-container textarea {
-  min-height: 6.25rem;
-  font-size: 14px;
+.whatsapp-icon:hover {
+  transform: scale(1.2);
 }
-
-.contact-form-container .input-field {
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-radius: 5px;
-  border: none;
-  border: 2px outset var(--primary-color);
-  font-size: 0.875rem;
-  outline: none;
-}
-
-.input-field::placeholder {
-  padding: 0.5rem;
-  color: var(--primary-color);
-}
-
-.submit-btn {
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  background-color: #fff;
-  border: 2px solid var(--primary-color);
-  border-radius: 5px;
-  font-size: 1rem;
-  font-weight: var(--bold-font);
-  transition: var(--transition);
-}
-
-.submit-btn:hover {
-  background-color: var(--primary-color);
-  border: 2px solid var(--primary-color);
-  cursor: pointer;
-}
-/* Contacts section ends */
 
 /* Social buttons */
 .socials {
   padding-left: 550px;
   font-size: 60px;
 }
-/* Social button ends */
 
 /* Scroll to top button */
 .scroll-up {
@@ -318,7 +286,6 @@ nav ul li {
   width: 3rem;
   height: 3rem;
 }
-/* Scroll to top button ends */
 
 /* Footer section */
 footer {
@@ -327,7 +294,6 @@ footer {
   text-align: center;
   margin: 2rem 0 0;
 }
-/* Footer section ends */
 
 /* General (utilities) */
 .icon-card {
@@ -353,13 +319,24 @@ footer {
   overflow: hidden; 
 }
 
+.projects {
+  background-color: var(--bg-color);
+  margin-top: 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); 
-  gap: 20px; 
-  justify-content: center; 
-  margin: 0 auto; 
-  max-width: 1000px; 
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 900px; 
+  padding: 0 20px; 
 }
 
 .project-slider-wrapper {
@@ -444,6 +421,102 @@ footer {
   top: -25px; 
 }
 
+.theme-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  color: var(--text-color-dark);
+  transition: color 0.3s ease;
+}
+
+.theme-toggle i {
+  color: #4756df; 
+}
+
+.dark-mode .theme-toggle i {
+  color: var(--text-color-dark) 
+}
+
+.theme-toggle:hover i {
+  color: #000000; 
+}
+
+.dark-mode .theme-toggle:hover i {
+  color: #dde63a; 
+}
+
+/* Estilos para modo oscuro */
+body.dark-mode {
+  background-color: var(--bg-color-dark);
+  color: var(--text-color-dark);
+}
+
+.dark-mode nav {
+  background-color: var(--bg-color-dark);
+  box-shadow: 0 3px 5px rgba(250, 247, 247, 0.291);
+}
+
+.dark-mode .icon-card {
+  background-color: var(--bg-color);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.748);
+}
+
+.dark-mode .project-card {
+  background-color: var(--bg-color);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.748);
+  color: var(--bg-color-dark);
+}
+
+.dark-mode .contact-form-container {
+  box-shadow: 0 3px 10px var(--primary-shadow-dark);
+}
+
+.dark-mode .input-field {
+  background-color: var(--bg-color-dark);
+  color: var(--text-color-dark);
+}
+
+.dark-mode .submit-btn {
+  background-color: var(--bg-color-dark);
+  color: var(--text-color-dark);
+}
+
+.dark-mode h1 {
+  background-color: var(--bg-color-dark);
+  color: var(--text-color-dark);
+}
+
+.dark-mode .projects {
+  background-color: var(--bg-color-projects);
+}
+
+.dark-mode .project-card a{
+  color: var(--secondary-color);
+}
+
+.dark-mode .nav-link {
+  color: var(--text-color-dark);
+}
+
+.dark-mode .burger-menu{
+  color: var(--text-color-dark);
+}
+
+.dark-mode .burger-menu:hover{
+  color: #000000;
+}
+
+.dark-mode .contact {
+  background-color: var(--bg-color-dark);
+}
+
+.dark-mode .contact h2{
+  color: var(--text-color-dark)
+}
+
+
 /* Media queries for responsiveness */
 @media screen and (max-width: 720px) {
   nav {
@@ -451,7 +524,7 @@ footer {
   }
   nav ul {
     position: fixed;
-    background-color: var(--bg-color);
+    background-color: var(--bg-color-dark);
     flex-direction: column;
     top: 86px;
     left: 10%;
@@ -459,6 +532,10 @@ footer {
     text-align: center;
     transform: translateX(120%);
     transition: transform 0.5s ease-in;
+  }
+
+  .navigation a:hover {
+    color: var(--secondary-color);
   }
 
   nav ul li {
@@ -583,22 +660,20 @@ footer {
   }
 
   nav ul {
-    display: none; /* Oculta el menú en pantallas pequeñas */
+    display: none; 
   }
 
   nav.active ul {
-    display: flex; /* Muestra el menú cuando se activa el botón burger */
+    display: flex; 
     flex-direction: column;
     gap: 0;
     position: absolute;
-    top: 60px; /* Ajusta según el tamaño del navbar */
+    top: 60px; 
     left: 0;
     right: 0;
     background-color: var(--bg-color);
     padding: 1rem;
   }
-
-  /* Hero section */
   .hero {
     flex-direction: column;
     align-items: center;
@@ -623,6 +698,33 @@ footer {
   /* Skills section */
   .skills {
     padding: 1rem;
+  }
+
+  .skills-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    padding: 0 1rem;
+  }
+
+  .first-set,
+  .second-set {
+    display: contents;
+  }
+
+  .icon {
+    width: 100%;
+    height: auto;
+    max-width: 120px;
+    margin: 0 auto;
+  }
+
+  .icon-card {
+    padding: 0.8rem;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   /* Projects section */
