--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -524,7 +524,7 @@ body.dark-mode {
   }
   nav ul {
     position: fixed;
-    background-color: var(--bg-color-dark);
+    background-color: var(--bg-color);
     flex-direction: column;
     top: 86px;
     left: 10%;
@@ -533,6 +533,10 @@ body.dark-mode {
     transform: translateX(120%);
     transition: transform 0.5s ease-in;
     z-index: 10;
+  }
+
+  .dark-mode nav ul {
+    background-color: var(--bg-color-dark);
   }
 
   .navigation a:hover {
@@ -656,16 +660,21 @@ body.dark-mode {
   }
   nav ul {
     position: fixed;
-    background-color: var(--bg-color-dark);
+    background-color: var(--bg-color);
     flex-direction: column;
     top: 86px;
-    left: 2%;
+    left: 20%;
     width: 80%;
     text-align: center;
     transform: translateX(120%);
     transition: transform 0.5s ease-in;
     z-index: 10;
+    border:#4756df;
     padding: 2rem 0;
+  }
+
+  .dark-mode nav ul {
+    background-color: var(--bg-color-dark);
   }
 
   .navigation a:hover {
@@ -687,6 +696,7 @@ body.dark-mode {
     flex-direction: column;
     align-items: center;
     padding: 1rem;
+    margin-top: auto;
   }
 
   .hero img {
