--- a/css/style.css
+++ b/css/style.css
@@ -293,9 +293,8 @@ body {
     gap: 5px;
     padding: 0.5rem 1rem;
     font-size: 1rem;
-    background-color: #172340;
-    border: 1px solid #9d9d9d;
-    border-radius: 2rem;
+    background-color: #2a2a2a;
+    border-radius: 8px;
     color: #fff;
     transition: box-shadow 0.5s ease;
     text-decoration: none;
